tests/gcc-torture/breakdown/success/970214-2.c
#include "cerberus.h"
#define m(L) ('1' + (L))
int
main ()
{
  exit (m (0) != '1');
}
