tests/gcc-torture/breakdown/fail/internal/970214-2.c
#include "cerberus.h"
#define m(L) (L'1' + (L))
int 
main (void)
{
  exit (m(0) != L'1');
}
